# src/main/java/vr/mini_autorizador/application/dto/TransactionRequest.java
@@ -1,0 +1,6 @@
+package vr.mini_autorizador.application.dto;
+
+import java.math.BigDecimal;
+
+public record TransactionRequest(String cardNumber, String cardPassword, BigDecimal amount) {
+}
